# fastapi-mini-bank

./: .coveragerc  .env.example  .gitignore  BUGFIX_BCRYPT.md  CI_CD.md  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  grafan-dash.json  jenkinsfile  pyproject.toml  pytest.ini  requirements.txt  run.sh  test_api.py  websocket_client.html
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: accounts.py  auth.py  transactions.py  users.py  websocket.py
app/core/: __init__.py  auth.py  logging_config.py  security.py  websocket.py
app/middleware/: logging_middleware.py  metrics_middleware.py
app/models/: __init__.py  account.py  transaction.py  user.py
app/schemas/: __init__.py  account.py  transaction.py  user.py
app/tasks/: __init__.py  celery_app.py  celery_tasks.py
k8s/base/: app.yaml  grafana-ingress.yaml  ingres.yaml  kustomization.yaml  mysql.yaml  redis.yaml  servicemonitor.yaml
tests/: conftest.py  test_accounts.py  test_auth.py  test_transactions.py  test_users.py  test_websocket.py
